<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="40dp"
        android:background="@drawable/dialog_bg">

        <TextView
            android:id="@+id/TvTitleDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/title"
            android:padding="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"/>

        <ImageView
            android:id="@+id/ImgDialog"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_android_black_24dp"
            android:contentDescription="@string/image" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/SuccessBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/success"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>