<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter Title"
        android:layout_marginStart="30dp"
        android:layout_marginTop="120dp"/>

    <EditText
        android:id="@+id/TitleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/zypher_ad_assignment"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/UploadedImage"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_below="@+id/TitleEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/UploadImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pick Image From Device"
        android:textColor="@color/white"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="120dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ShowData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_data"
        android:textColor="@color/white"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="120dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/UploadData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_data_call_api"
        android:textColor="@color/white"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="70dp"/>

</RelativeLayout>